--- a/TesteUPD8/Views/Clientes/Cadastrar.cshtml
+++ b/TesteUPD8/Views/Clientes/Cadastrar.cshtml
@@ -72,7 +72,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary mb-2 mt-4">Salvar</button>
-                            <button type="submit" class="btn btn-secundary mb-2 mt-4">Salvar</button>
+                            <button type="submit" class="btn btn-secundary mb-2 mt-4">Voltar</button>
                         </div>                    
                     </div>
                 </div>
