--- a/TesteUPD8/Views/Clientes/Listar.cshtml
+++ b/TesteUPD8/Views/Clientes/Listar.cshtml
@@ -7,9 +7,10 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <div class="card-header py-3">
+            <a asp-action="Cadastrar" class="btn btn-success float-right m-sm-1">Criar Novo</a>        
+                <div class="card-body">
             <h1 class="m-0 bold text-primary">Clientes</h1>
         </div>
-        <div class="card-body">
             <table id="myTable" class="table table-bordered dataTable table-hover" style="width:100%">
                 <thead>
                     <tr>
